Update config to include w3 css.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -67,3 +67,9 @@ suffixes = [""]
 [outputFormats.WebAppManifest]
 mediaType = "application/manifest+json"
 rel = "manifest"
+
+############################# Plugins ##############################
+
+# CSS Plugins
+[[params.plugins.css]]
+link = "https://www.w3schools.com/w3css/4/w3.css"
