--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -70,6 +70,11 @@ rel = "manifest"
 
 ############################# Plugins ##############################
 
+[[params.plugins.css]]
+link = "https://www.w3schools.com/w3css/4/w3.css"
+# attributes = "your-attributes" # optional field
+
+
 # CSS Plugins
 # [[params.plugins.css]]
 # link = "https://www.w3schools.com/w3css/4/w3.css"
