--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -24,9 +24,9 @@ mainSections = ["blog"]
 
 # contact form works with https://formspree.io and Netlify
 # use Netlify's contact form functionality
-netlify = true # set to false if using formspree.io
+netlify = false # set to false if using formspree.io
 # contact form action
-contact_form_action = "#"
+contact_form_action = "https://formspree.io/f/myyajeed"
 # copyright
 theme_copyright = false
 copyright = ""
