attempt to fix disqus comments

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'iwriter Hugo'
 theme = 'iwriter-hugo'
+
+services:
+  disqus:
+    shortname: katieturner
