attempt to fix disqus comments

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,6 @@ languageCode = 'en-us'
 title = 'iwriter Hugo'
 theme = 'iwriter-hugo'
 
-services:
-  disqus:
-    shortname: katieturner
+[services]
+  [services.disqus]
+    shortname = 'katieturner'
